--- a/cuotas.html
+++ b/cuotas.html
@@ -56,6 +56,6 @@
         </table>
     </div>
     </div>
-    <script src="./js/app.js"></script>
+    <script src="./js/cuotas.js"></script>
 </body>
 </html>
